--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,6 @@
+<div class="form-div">
+
+
 <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
     <nz-form-item>
       <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">E-mail</nz-form-label>
@@ -110,4 +113,4 @@
         <button nz-button nzType="primary">Register</button>
       </nz-form-control>
     </nz-form-item>
-  </form>
+  </form></div>
