--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,5 +1,9 @@
 <nz-carousel [nzEffect]="effect">
-    <div nz-carousel-content *ngFor="let index of array">
-      <h3>{{ index }}</h3>
+    <div nz-carousel-content *ngFor="let index of carousel">
+      <div>
+      </div>
     </div>
   </nz-carousel>
+
+  <!-- <img src='src\app\pages\welcome\img\a.jpg'> -->
+ 
