--- a/src/app/account-management/account-management.component.html
+++ b/src/app/account-management/account-management.component.html
@@ -32,8 +32,8 @@
             </td>
 
         </tr>
-        <nz-pagination [nzPageIndex]="1" [nzPageSize]="10" [nzTotal]="userData.length" (nzPageIndexChange)="onPageIndexChange($event)">
-        </nz-pagination> 
+        <!-- <nz-pagination [nzPageIndex]="1" [nzPageSize]="10" [nzTotal]="userData.length" (nzPageIndexChange)="onPageIndexChange($event)">
+        </nz-pagination>  -->
 
     </tbody>
     
