complete table function

--- a/src/app/account-management/account-management.component.html
+++ b/src/app/account-management/account-management.component.html
@@ -39,3 +39,35 @@
     
 </nz-table>
 
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">User Details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="userForm" >
+                <div class="mb-3">
+                  <label for="exampleInputName" class="form-label">User Email</label>
+                  <input type="email" formControlName="email" class="form-control" id="exampleInputname" required>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputDescription" class="form-label">User Password</label>
+                  <input type="text" formControlName="password" class="form-control" id="exampleInputDescription" required>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputDueDate" class="form-label">Account Type</label>
+                    <input type="text" formControlName="accountType" class="form-control" id="exampleInputDueDate" required>
+                  </div>
+              </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" *ngIf="showAdd" (click)="postUserDetails()" class="btn btn-primary">Add</button>
+          <button type="button" *ngIf="showUpdate" (click)="updateUserDetails()" class="btn btn-primary">Update</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
