--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
              <a routerLink="/account">Account</a>
            </li>
            <li nz-menu-item nzMatchRouter>
-             <a>Workplace</a>
+             <a routerLink="/Vote">Vote</a>
            </li>
          </ul>
        </li>
