--- a/src/app/pages/welcome/welcome.component.css
+++ b/src/app/pages/welcome/welcome.component.css
@@ -13,3 +13,13 @@
         margin-bottom: 0;
         user-select: none;
       }
+      nz-progress {
+        margin-right: 8px;
+        margin-bottom: 8px;
+        margin-top: 20px;
+        display: inline-block;
+      }
+      label{
+        margin-left: 45px;
+        margin-right: 50px;
+      }
