--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -38,7 +38,7 @@
             </div>
         <div nz-col nzSpan="8"></div>
     </div>
-    <button nz-button (click)= "tallyVote()">submit</button>
+    <button nz-button nzType="primary" (click)= "tallyVote()">submit</button>
 </div>
 
 <ng-template #elseBlock>
