--- a/src/app/candidates/candidates.component.html
+++ b/src/app/candidates/candidates.component.html
@@ -1,3 +1,4 @@
+<button (click)= "AddCandidate()" >add</button>
 <nz-table e #filterTable [nzData]="listOfData" nzTableLayout="fixed">
     <thead>
         <tr>
@@ -12,18 +13,20 @@
           >
             {{ column.name }}
           </th>
+          <th>Actions</th>
         </tr>
     </thead>
     <tbody>
         
         <tr *ngFor = "let row of filterTable.data">
             <td>{{row.id}}</td>
+            <td>{{row.name}}</td>
             <td>{{row.position}}</td>
             <td>{{row.posCode}}</td> 
                     
             <td>
-                <button nz-button nzType="primary" >Edit</button>
-                <button nz-button nzDanger >Delete</button>
+                <button nz-button nzType="primary" (click)= "showModal(row)" >Edit</button>
+                <button nz-button nzDanger (click)= "deleteCandidate(row)">Delete</button>
             </td>
 
         </tr>
@@ -32,27 +35,26 @@
     
 </nz-table>
 
-    <!-- <nz-modal [(nzVisible)]="isVisible" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
+    <nz-modal [(nzVisible)]="isVisible" (nzOnCancel)="handleCancel()" (nzOnOk)="okbutton()">
       <ng-container *nzModalContent>
         <div class="form-div">
 
 
-          <form nz-form [formGroup]="userForm" (ngSubmit)="handleOk()">
+          <form nz-form [formGroup]="candidateForm">
               <nz-form-item>
-                <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">E-mail</nz-form-label>
+                <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="name">Candidate Name</nz-form-label>
                 <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="The input is not valid E-mail!">
-                  <input nz-input formControlName="email" id="email" />
+                  <input nz-input formControlName="name" id="name" />
                 </nz-form-control>
               </nz-form-item>
               <nz-form-item>
-                <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="password" nzRequired>Password</nz-form-label>
-                <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input your password!">
+                <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="[password]" nzRequired>Candidate Position</nz-form-label>
+                <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input Candidate POsition!">
                   <input
                     nz-input
-                    type="password"
-                    id="password"
-                    formControlName="password"
-                    (ngModelChange)="updateConfirmValidator()"
+                    type="text"
+                    id="position"
+                    formControlName="position"
                   />
                 </nz-form-control>
               </nz-form-item>
@@ -60,31 +62,21 @@
                 <nz-form-label
                   [nzSm]="6"
                   [nzXs]="24"
-                  nzFor="accountType"
+                  nzFor="posCode"
                   nzRequired
-                  nzTooltipTitle="Set Account Access"
                 >
-                  <span>Account</span>
+                  <span>Position Code</span>
                 </nz-form-label>
-                <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input your Account Type!">
-                  <input nz-input id="accountType" formControlName="accountType" />
+                <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input Candidate Position Code!">
+                  <input nz-input id="posCode" formControlName="posCode" />
                 </nz-form-control>
               </nz-form-item>
               <nz-form-item nz-row class="register-area">
                 <nz-form-control [nzSpan]="14" [nzOffset]="6">
-                  <label nz-checkbox formControlName="agree">
-                    <span>
-                      I have read the
-                      <a>agreement</a>
-                    </span>
-                  </label>
-                </nz-form-control>
-              </nz-form-item>
-              <nz-form-item nz-row class="register-area">
-                <nz-form-control [nzSpan]="14" [nzOffset]="6">
-                  <button nz-button nzType="primary">Update</button>
+                  <button nz-button *ngIf="showUpdate" (click)="handleOk()"  nzType="primary">Update</button>
+                  <button nz-button *ngIf="showAdd" (click)="postCandidate()" nzType="primary">Add</button>
                 </nz-form-control>
               </nz-form-item>
             </form></div>
       </ng-container>
-    </nz-modal> -->
+    </nz-modal>
