--- a/src/app/candidates/candidates.component.html
+++ b/src/app/candidates/candidates.component.html
@@ -1,4 +1,4 @@
-<button (click)= "AddCandidate()" >add</button>
+<button nz-button nzType="primary" (click)= "AddCandidate()" >Add</button>
 <nz-table e #filterTable [nzData]="listOfData" nzTableLayout="fixed">
     <thead>
         <tr>
@@ -49,7 +49,7 @@
               </nz-form-item>
               <nz-form-item>
                 <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="[password]" nzRequired>Candidate Position</nz-form-label>
-                <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input Candidate POsition!">
+                <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Please input Candidate Position!">
                   <input
                     nz-input
                     type="text"
