--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -5,13 +5,8 @@
     <div class="space"></div>
       <div nz-row>
         <div nz-col nzSpan="12" nzOffset="7">
-                <nz-radio-group [(ngModel)]="President" nzButtonStyle="solid">
-                    <div *ngFor="">
-
-                    <label nz-radio-button nzValue="pA">President A</label>
-                    <label nz-radio-button nzValue="pB">President B</label>
-                    <label nz-radio-button nzValue="pC">President C</label>
-                </div>
+                <nz-radio-group [(ngModel)]="President" nzButtonStyle="solid" *ngFor="let row of presidentData">
+                    <label nz-radio-button nzValue={{row.posCode}}>{{row.name}}</label>
                 </nz-radio-group>
             </div>
     </div>
@@ -22,11 +17,9 @@
     <div class="space"></div>
       <div nz-row>
         <div nz-col nzSpan="12" nzOffset="7">
-                <nz-radio-group [(ngModel)]="Vpresident"nzButtonStyle="solid">
-                    <label nz-radio-button nzValue="vpA">Vice President A</label>
-                    <label nz-radio-button nzValue="vpB">Vice President B</label>
-                    <label nz-radio-button nzValue="vpC">Vice President C</label>
-                </nz-radio-group>
+            <nz-radio-group [(ngModel)]="Vpresident" nzButtonStyle="solid" *ngFor="let row of vPresidentData">
+                <label nz-radio-button nzValue={{row.posCode}}>{{row.name}}</label>
+            </nz-radio-group>
             </div>
     </div>
     <div class="space"></div>
@@ -36,10 +29,8 @@
     <div class="space"></div>
       <div nz-row>
         <div nz-col nzSpan="12" nzOffset="7">
-            <nz-radio-group [(ngModel)]="Secretary"nzButtonStyle="solid">
-                <label nz-radio-button nzValue="sA">Secretary A</label>
-                <label nz-radio-button nzValue="sB">Secretary B</label>
-                <label nz-radio-button nzValue="sC">Secretary C</label>
+            <nz-radio-group [(ngModel)]="Secretary" nzButtonStyle="solid" *ngFor="let row of secretaryData">
+                <label nz-radio-button nzValue={{row.posCode}}>{{row.name}}</label>
             </nz-radio-group>
         </div>
     </div>
